...
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/profiledefault"
            android:id="@+id/userImageNavHeader"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/loginBtnNavHeader"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/userNameNavHeader"
            tools:text="VadimN"
            app:layout_constraintStart_toEndOf="@+id/userImageNavHeader" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toTopOf="@+id/userImageNavHeader"/>

    <TextView
...
            android:layout_height="wrap_content"
            android:id="@+id/userEmailNavHeader"
            tools:text="novikov6455@gmail.com" app:layout_constraintStart_toEndOf="@+id/userImageNavHeader"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameNavHeader"/>
    <Button
            android:text="Login"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:id="@+id/loginBtnNavHeader"
            android:background="@android:color/transparent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="loginBtnNavClicked"
...
